Another checkpoint, now filtering works git add .git add .